# remeres-map-editor-redux

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DailyReport.md  OPENGL_REPORT.md  README.md  UI.MD  as_cast_audit.txt  build_clang.sh  build_linux.sh  build_log.txt  build_ninja.bat  build_relwithdebinfo.bat  build_windows.bat  cleanup_brushes.sh  conanfile.py  config.toml  conflicts_found.txt  daily_opengl_report.md  daily_report.txt  decouple_editor.py  find_missing_icons.py  find_old_patterns.py  fix_doxygen.py  fix_headers.py  fix_item_calls.sh  fix_layer_drawer_lm.py  fix_yaml.py  gemini_findings.md  generate_vcproj.bat  is_check_audit.txt  json_path.txt  linux_build.sh  lua_includes.txt  (+16 more)
.agent/rules/: wxwidgets.md
.aiox-core/: .installed-manifest.yaml  core-config.yaml  package-lock.json  version.json
.aiox-core/data/: entity-registry.yaml
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/gsd-migration-journal/: 2026-05-21T18-18-39-792Z-cbe9cdd63e01ae6b.json
.cursor/rules/: agent-authority.mdc  agent-handoff.mdc  agent-memory-imports.mdc  handoff-consolidation.mdc  ids-principles.mdc  tool-examples.md  tool-examples.mdc  workflow-execution.mdc
.gemini/: styleguide.md
.gemini/rules/: coderabbit-integration.md  mcp-usage.md  story-lifecycle.md  tool-response-filtering.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/commands/: gemini-invoke.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml
.github/workflows/: build.yml  clang-format.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  qodo-merge.yml  qwen-dispatch.yml  qwen-invoke.yml  qwen-review.yml  qwen-scheduled-triage.yml  qwen-triage.yml
.jules/: bolt.md  profiler.md
.jules/agents/: architect.md  auditor.md  designer.md  fixer.md  keeper.md  phantom.md  sentinel.md  throttle.md
.jules/newagents/: Bolt.md  Bugger.md  Domain.md  Opengl.md  Palette.md  Profiler.md  Smeller.md  Upgrader.md  docs.md  icon.md  refactor.md  wxwidgets.md
data/: clients.toml  convert_legacy_data_README.md  menubar.xml  technical-items.xml  visuals.defaults.toml
data/1010/: conversion_report.json
data/10100/: conversion_report.json
data/1021/: conversion_report.json  items.xml
data/1030/: conversion_report.json  items.xml
data/1035/: conversion_report.json
data/1041/: conversion_report.json  items.xml
data/1077/: items.xml
data/1286/: conversion_report.json
data/740/: conversion_report.json
data/760/: palettes.xml
data/800/: materials.xml  palettes.xml
data/810/: conversion_report.json  materials.xml
data/820/: conversion_report.json
data/850/: items.xml
data/854/: items.xml
data/870/: conversion_report.json  items.xml
data/920/: items.xml
data/946/: conversion_report.json
data/970/: items.xml
data/986/: conversion_report.json
data/migrated_brushes/: convert_legacy_data.py
docs/: RENDERING_REVIEW.md  rendering_audit.md  rendering_review.md
docs/ai/: AI_DOCS_INDEX.md  GSD_AIOX_REWRITE_TASK_FACTORY.md  NOCTMAPEDITOR_RUST_REWRITE_MASTERPLAN.md  REDUX_CANARY_AUTHORITY_MATRIX.md  RUST_BACKEND_REWRITE_ADR.md  TS_REACT_TAURI_FRONTEND_STRATEGY.md
lua_tests/: QUICK_REFERENCE.md  README_TESTS.md  run_all_tests.lua  run_all_tests_bulk.lua  test_algo.lua  test_algo_extended.lua  test_brush.lua  test_color.lua  test_creature.lua  test_dialog_extended.lua  test_geo_extended.lua  test_http_extended.lua  test_json.lua  test_noise_extended.lua  test_selection.lua
project/: implementation_plan.md  proposition_2_full_soc_plan.md  remaining_tasks.md  rendering_pipeline_documentation.md  task.md
rme_qt6/: jules_qt6.md
scripts/: README.md  fix_rendering_includes.py  linter.lua  terrain_generator_demo.lua
scripts/border_studio/: border_draft.lua  border_loader.lua  border_repository.lua  common.lua  draft_adapter.lua  ground_draft.lua  ground_support.lua  library_panel.lua  logger.lua  main.lua  manifest.lua  model.lua  page.lua  raw_panel.lua  save_panel.lua  settings.json  slots_panel.lua  test_preview_panel.lua  xml_writer.lua
scripts/brush_studio/: composer_draft.lua  composer_page.lua  composer_repository.lua  logger.lua  main.lua  manifest.lua  module_paths.lua  page_contract.lua  palette_draft.lua  palette_page.lua  palette_repository.lua  placeholder_page.lua  session.lua  shell.lua
scripts/ground_studio/: common.lua  ground_draft.lua  library_panel.lua  logger.lua  main.lua  manifest.lua  model.lua  page.lua  preview_panel.lua  properties_panel.lua  repository.lua  save_panel.lua  settings.json  xml_codec.lua
scripts/hello_world/: hello_world.lua  manifest.lua
scripts/mcp/: mcp_server.lua
scripts/tests/: framework.lua  test_app.lua  (+10 more)
source/: CMakeLists.txt  Editor.rc  action.cpp  action.h  add_item_window.cpp  add_tileset_window.cpp  application.cpp  application.h  basemap.cpp  benchmark_gamesprite.cpp  browse_tile_window.cpp  brush.cpp  brush.h  carpet_brush.h  client_version.cpp  client_version.h  clients.toml  common_windows.cpp  complexitem.h  creature.h  creature_brush.h  creatures.h  dat_debug_view.cpp  dcbutton.cpp  dcbutton.h  doodad_brush.h  editor.cpp  eraser_brush.cpp  extension.h  find_item_window.cpp  graphics.h  ground_brush.cpp  ground_brush.h  gui.cpp  gui.h  gui_ids.h  house.h  house_brush.h  house_exit_brush.h  iomap_otbm.cpp  (+57 more)
tools/: auditor_cleanup.py  modernize_typedef.py  raster_check.py  smell_scanner.py  verify_tile_renderer.py
vcproj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  generate_vcproj.bat  rme.sln  rme.vcxproj  rme.vcxproj.filters
(+2034 files in other folders)
